--- a/TODO
+++ b/TODO
@@ -57,14 +57,13 @@
 
 
 /watch:
-    -C  - css
+    -C  - css                                                                                           @done
 
     -S  - streaming mp4 && webm without issue                                                           @done
         - streaming all format                                                                          @done                                                           
         - deal with all videos format thanks to fluent-ffmpeg                                           @done
-        - handle subtitles                                                                              
-            --> probleme d'accent // formatage utf-8                                                    
-        - if user's language doesn't match movie's language then default subtitles                      
+        - handle subtitles                                                                              @done
+            --> probleme d'accent // formatage utf-8                                                    @done
 
 
 BONUS (?)
@@ -85,7 +84,7 @@ BUGS >>
 
     - error 206 partial content when streaming movie                                                    @done                                                
     - video not loading if its downloaded for the 1st time and no reloading                             @done
-    - `Output stream closed` error
+    - `Output stream closed` error                                                                      @done
 
     - { error: 'Cant find imdb in database. Are you sure this imdb exists?',
         error_code: 10 } on some movies
