Some fix on oauth

--- a/TODO
+++ b/TODO
@@ -70,9 +70,9 @@ BONUS (?)
     - refonte visuelle input img `register`, `account`
     - oauth icons `register`
     - 1point per oauth strategy
-    - all subtitles
+    - all subtitles                                                                                     @done
     - beautiful img for `registration`/`login`
-    - deal with different quality
+    - deal with different quality                                                                       @done
 
 
 
